--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Database Properties
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/heroes_spring_db?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/heroes_spring_db?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useJDBCCompliantTimezone=true&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = eemmoo123
 
